k8s/deployment.yaml
# k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: search-daemon
  namespace: default
spec:
  replicas: 2
  selector:
    matchLabels:
      app: search-daemon
  template:
    metadata:
      labels:
        app: search-daemon
    spec:
      containers:
      - name: search-daemon
        image: erizo9/searchdaemon:latest
        ports:
        - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: search-daemon-svc
  namespace: default
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: search-daemon
  type: NodePort
