k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: search-daemon-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: search-daemon.inspecciono.com  # Cambiar si necesitas otro dominio
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: search-daemon-svc
            port:
              number: 80
  tls:
  - hosts:
    - search-daemon.inspecciono.com
    secretName: search-daemon-ssl
